tdf#120945: Relationship of tables isn't recognized by formwizard

The patch implements getExportedKeys which was lacking.
Console logs:
warn:connectivity.firebird:13144:18512:connectivity/source/drivers/firebird/DatabaseMetaData.cxx:1468: Not yet implemented
warn:legacy.osl:13144:18512:connectivity/source/drivers/firebird/DatabaseMetaData.cxx:1469: Not implemented yet!

The only difference with getImportedKeys is the fact that :
- in getImportedKeys, table name of Where condition is the foreign key
- in getExportedKeys, table name of Where condition should be the primary key
Instead of duplicating the whole code of getImportedKeys,
I created a local function which contains the main part.

Change-Id: Ia4497524fecf098257eec27e44e016a7cbe23480